--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 
 <body>
   <h3>Oops, page not found...</h3>
-  <a href='/'>return to Acme Schools</a>
+  <a href='/'>return to [app name]</a>
   <br />
   <br />
   <br />
