--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-US">
 
 <head>
-  <title>ACME Schools</title>
+  <title>Acme Store</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="dist/main.js" defer></script>
