--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Acme Store</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <script src="dist/main.js" defer></script>
 </head>
 
